--- a/cozumel-scoots/styles/larger.css
+++ b/cozumel-scoots/styles/larger.css
@@ -17,6 +17,7 @@
     h1 {
         width: auto;
         padding: 0 1em;
+        font-size: 2rem;
     }
 
     .hero {
@@ -74,6 +75,7 @@
         width: 100%;
         display: grid;
         margin: auto;
+        grid-column: span 2;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 1em;
         
